--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -20,21 +20,27 @@ body{
     padding-left: 0;
   }
 
+  //header
+  .header{
+      background: $purple-gradient-header;
+  }
+
+
     
-    //scrollbar
-    ::-webkit-scrollbar {width: 8px;}
+//scrollbar
+::-webkit-scrollbar {width: 8px;}
 
-    ::-webkit-scrollbar-button:start:decrement, ::-webkit-scrollbar-button:end:increment {
-    display:none;
-    }
+::-webkit-scrollbar-button:start:decrement, ::-webkit-scrollbar-button:end:increment {
+display:none;
+}
 
-    ::-webkit-scrollbar-track-piece {
-    background-color: #f5f5f5;
-    -webkit-border-radius:7px;
-    border-left:1px #999 #888;
-    }
+::-webkit-scrollbar-track-piece {
+background-color: #f5f5f5;
+-webkit-border-radius:7px;
+border-left:1px #999 #888;
+}
 
-    ::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 7px;
-    background: rgba(0, 0, 0, 0.1);
-    }
+::-webkit-scrollbar-thumb {
+-webkit-border-radius: 7px;
+background: rgba(0, 0, 0, 0.1);
+}
