--- a/assets/scss/colors.css
+++ b/assets/scss/colors.css
@@ -1,3 +1,16 @@
+.text-white {
+  color: #ffffff; }
 
+.text-black {
+  color: #1e1f22; }
+
+.bold-500 {
+  font-weight: 500; }
+
+.bold-600 {
+  font-weight: 600; }
+
+.bold-900 {
+  font-weight: 900; }
 
 /*# sourceMappingURL=colors.css.map */
