--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1,3 +1,18 @@
+.text-white {
+  color: #ffffff; }
+
+.text-black {
+  color: #1e1f22; }
+
+.bold-500 {
+  font-weight: 500; }
+
+.bold-600 {
+  font-weight: 600; }
+
+.bold-900 {
+  font-weight: 900; }
+
 body {
   overflow-x: hidden !important;
   font-family: 'Lato', sans-serif !important; }
@@ -14,7 +29,17 @@ ul {
   padding-left: 0; }
 
 .header {
-  background: linear-gradient(-224deg, #B97ADF 0%, #8278E1 100%); }
+  padding: 10px 0; }
+  .header.purple {
+    background: linear-gradient(-224deg, #B97ADF 0%, #8278E1 100%); }
+  .header.blue {
+    background: linear-gradient(-225deg, #9BFAFC 0%, #175CAE 100%); }
+  .header.melon {
+    background: linear-gradient(-45deg, #CE8FE8 0%, #FA8C81 100%); }
+  .header.green {
+    background: linear-gradient(-45deg, #0FA0E1 0%, #53E7B3 100%); }
+  .header h2 {
+    font-size: 22px; }
 
 ::-webkit-scrollbar {
   width: 8px; }
