--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,5 +1,6 @@
 @import 'colors';
 @import 'mixins';
+@import 'header';
 
 body{
     overflow-x: hidden !important;
@@ -19,27 +20,6 @@ body{
     margin-bottom: 0;
     padding-left: 0;
   }
-
-  //header
-  .header{
-    padding: 10px 0;
-      &.purple{
-        background: $purple-gradient-header;
-      }
-      &.blue{
-        background: $blue-gradient-header;
-      }
-      &.melon{
-        background: $melon-gradient-header;
-      }
-      &.green{
-        background: $green-gradient-header;
-      }
-      h2{
-        font-size: 22px;
-      }
-    }
-
 
     
 //scrollbar
